# inst-decode-search

./: Cargo.toml  LICENSE  README.rst  endbr-findings.s  pkru-findings.s
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_boundaries.rs  fuzz_single_inst.rs  fuzz_vex.rs
src/: lib.rs  main.rs
